--- a/spacemule/layouts/partials/extended_head.html
+++ b/spacemule/layouts/partials/extended_head.html
@@ -2,4 +2,4 @@
 To add an extended head section, please create
 `layouts/partials/extended_head.html` in your Hugo directory.
 -->
-<script async defer data-website-id="78b01028-e8a0-494b-b941-3276e25615d5" src="https://lytics.spacemule.net/umami.js"></script>
+<script defer src="https://lytics.spacemule.net/script.js" data-website-id="78b01028-e8a0-494b-b941-3276e25615d5"></script>
